kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $$service-name$$-deployment
  labels:
    app: $$service-name$$
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $$service-name$$
  template:
    metadata:
      labels:
        app: $$service-name$$
    spec:
      containers:
        - name: $$service-name$$
          image: $$image$$
          ports:
            - containerPort: $$port$$
          resources:
            limits: 
              cpu: 500m
            requests:
              cpu: 200m
      imagePullSecrets:
        - name: acr-pull
