kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $$service-name$$-svc
spec:
  selector:
    app: $$service-name$$
  ports:
    - protocol: TCP
      port: 80
      targetPort: $$port$$
